<resources>
    <string name="app_name">Gnomon</string>
    <string name="title_explorar">Explorar</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_mensajes">Mensajes</string>
    <string name="title_perfil">Perfil</string>
    <string name="search_title">search_title</string>
    <string name="app_label">app_label</string>
    <string name="search_hint">search_hint</string>
    <string name="title">title</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirm_password">Confirmación de Contraseña</string>
    <string name="e_mail">E-mail</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="registrar">Registrar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>