<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <item
        android:id="@+id/navigation_explorar"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_explorar" />

    <item
        android:id="@+id/navigation_favorito"
        android:icon="@drawable/ic_favorite_border_24px"
        android:title="@string/title_favoritos" />

    <item
        android:id="@+id/navigation_agenda"
        android:icon="@drawable/ic_date_range_24px"
        android:title="@string/title_agenda" />

    <item
        android:id="@+id/navigation_mensajes"
        android:icon="@drawable/ic_sms_24px"
        android:title="@string/title_mensajes" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_person_pin_24px"
        android:title="@string/title_perfil" />

</menu>
